[package]
name = "route-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
sha2 = "0.10"
ed25519-dalek = "1.0"
log = "0.4"
env_logger = "0.10" 